@@ -12,6 +12,64 @@
 	<name>KeywordSearch</name>
 	
 	
+
+
+<pluginRepositories>
+		<pluginRepository>
+			<id>spring-releases</id>
+			<url>https://repo.spring.io/libs-release</url>
+		</pluginRepository>
+</pluginRepositories>
+
+
+
+
+	<build>
+		<plugins>
+			<!--Surefire - for JUnits -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.17</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>						
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.6</version>
+			</plugin>
+			
+			
+			
+				
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<systemProperties>
+						<JAVA_OPTS>-Xms415m -Xmx16G -XX:MaxPermSize=1G</JAVA_OPTS>
+					</systemProperties>
+					<mainClass>org.aksw.hawk.webservice.WebApplication</mainClass>
+				</configuration>
+			</plugin>
+		
+			
+			
+			
+			
+		</plugins>
+	</build>
+
+
 	 <repositories>
              <repository>
              	<id>mvnrepository</id>
@@ -28,16 +86,29 @@
 			<id>maven.aksw.snapshots</id>
 			<name>AKSW Snapshot Repository</name>
 			<url>http://maven.aksw.org/archiva/repository/snapshots</url>
+			</repository>		
+			<repository>
+			<id>maven.aksw.internal</id>
+			<name>University Leipzig, AKSW Maven2 Repository</name>
+			<url>http://maven.aksw.org/archiva/repository/internal</url>
 			</repository>
 
+			<repository>
+			<id>spring-releases</id>
+			<url>https://repo.spring.io/libs-release</url>
+			</repository>
+			<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
 	</repositories>
-
 
 
 	
 		
 
 	<dependencies>
+	
 		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-web-api</artifactId>
@@ -105,8 +176,16 @@
 		<dependency>
     		<groupId>org.glassfish</groupId>
     		<artifactId>javax.json</artifactId>
-    		<version>1.0.4</version>
+    		<version>1.0.3</version>
 		</dependency>
+		
+		
+
+		
+		
+		
+		
+		
 
 
 		<!-- DL-Learner used for LGG -->
@@ -154,30 +233,84 @@
         	<version>2.4</version>
         	<classifier>jdk15</classifier>
     	</dependency>
+    	
+    	
+    	
+    	
+    	
+    	<!-- https://mvnrepository.com/artifact/com.hp.hpl.jena/jena -->
+		<dependency>
+    		<groupId>com.hp.hpl.jena</groupId>
+    		<artifactId>jena</artifactId>
+    		<version>2.5.5</version>
+		</dependency>
+    	<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1</version>
+  		</dependency>
+
+
+
+
+
+    	<dependency>
+    		<groupId>edu.stanford.nlp</groupId>
+    		<artifactId>stanford-corenlp</artifactId>
+    		<version>1.3.4</version>
+    	</dependency>
+    	<!-- https://mvnrepository.com/artifact/de.julielab/aliasi-lingpipe -->
+		<dependency>
+    		<groupId>de.julielab</groupId>
+    		<artifactId>aliasi-lingpipe</artifactId>
+    		<version>4.1.0</version>
+		</dependency>
+		
+		
+		
+		<dependency>
+			<groupId>edu.mit</groupId>
+			<artifactId>jwi</artifactId>
+			<version>2.3.3</version>
+		</dependency>
+		<dependency>
+			<groupId>net.didion.jwnl</groupId>
+			<artifactId>jwnl</artifactId>
+			<version>1.4.1.RC2</version>
+		</dependency>
+		
+		
+		
+		<dependency>
+			<groupId>org.aksw.qa</groupId>
+			<artifactId>datasets</artifactId>
+			<version>0.0.4-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.aksw.qa</groupId>
+			<artifactId>commons</artifactId>
+			<version>0.0.11-SNAPSHOT</version>
+		</dependency>
+
+
+
+
+
+
+
+
+		<dependency>
+			<groupId>org.aksw.qa</groupId>
+			<artifactId>hawk</artifactId>
+			<version>0.0.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<version>1.2.4.RELEASE</version>
+		</dependency>
 	</dependencies>
 
-	<build>
-		<plugins>
-			<!--Surefire - for JUnits -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.17</version>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-war-plugin</artifactId>
-				<version>2.6</version>
-			</plugin>
-		</plugins>
-	</build>
+
 </project>
